--- a/Bootstrap4/conFusion/contactus.html
+++ b/Bootstrap4/conFusion/contactus.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <link href="css/styles.css" rel="stylesheet">
+    <style>
+        input[id="countrycode"]::placeholder {  
+                  text-align: right; 
+              } 
+    </style>
 </head>
 
 <body>
@@ -92,7 +97,69 @@
               <h3>Send us your Feedback</h3>
            </div>
             <div class="col-12 col-md-9">
-                Form goes here
+                <form action="">
+                    <div class="form-group row">
+                        <label for="firstname" class="col-md-2 col-form-label">First Name: </label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="firstname" name="firstname" 
+                            placeholder="First Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="lastname" class="col-md-2 col-form-label">Last Name: </label>
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="lastname" name="lastname" 
+                            placeholder="Last Name">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="telnum" class="col-12 col-md-2 col-form-label">Contact Number: </label>
+                        <div class="col-5 col-md-3">
+                            <input type="tel" class="form-control" id="countrycode" name="countrycode" 
+                            placeholder="+91">
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input type="tel" class="form-control" id="telnum" name="telnum" 
+                            placeholder="1234567890">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="emailid" class="col-md-2 col-form-label">Email ID: </label>
+                        <div class="col-md-10">
+                            <input type="email" class="form-control" id="emailid" name="emailid" 
+                            placeholder="Email">
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="col-md-6 offset-md-2">
+                            <div class="form-check">
+                                <input type="checkbox" class="form-check-input" name="approve" id="approve" value="">
+                                <label for="approve" class="form-check-label">
+                                    <strong>May We Contact You?</strong>
+                                </label>
+                            </div>
+                            <div class="col-md-3 offset-md-1">
+                                <select name="" id="" class="form-control">
+                                    <option value="">Tel.</option>
+                                    <option value="">Email</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <label for="feedback" class="col-md-2 col-form-label">Your Feedback: </label>
+                        <div class="col-md-10">
+                            <textarea name="feedback" id="feedback" rows="12" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">
+                                Submit Feedback
+                            </button>
+                        </div>
+                    </div>
+                </form>
             </div>
              <div class="col-12 col-md">
             </div>
