--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -39,8 +39,13 @@
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
-                <div class="col-12 col-sm align-self-center">
+                <div class="col-12 col-sm-3 align-self-center">
                     <img src="img/logo.png" alt="Restaurant Logo" class="img-fluid">
+                </div>
+                <div class="col-12 col-sm-3 align-self-center">
+                    <span>
+                        <a href="#reserve" class="btn btn-solid btn-block bg-warning">Reserve Table</a>
+                    </span>
                 </div>
             </div>
         </div>
@@ -58,7 +63,7 @@
                         <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
                         <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
                     </div>
-            </div>
+                </div>
             </div>
         </div>
 
@@ -68,8 +73,13 @@
                 <h3>This Month's Promotions</h3>
             </div>
             <div class="col col-sm col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                <div class=" media media-right">
+                    <div class="media-body">
+                        <h2>Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                        <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+                    </div>
+                    <img src="img/buffet.png" alt="buffet" class="d-flex ml-3 img-thumbnail align-self-center">
+                </div>
             </div>
         </div>
 
@@ -84,6 +94,53 @@
                         <h2>Alberto Somayya</h2>
                         <h4>Executive Chef</h4>
                         <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8 offset-sm-2">
+                <div class="card" id="reserve">
+                    <h3 class="card-header bg-warning text-white">Reserve A Table</h3>
+                    <div class="card-body">
+                        <form action="">
+                            <div class="form-group row">
+                                <label for="people" class="col-md-2 col-form-label">Number Of Guests: </label>
+                                <div class="col-md-10">
+                                    <input type="radio" id="1" name="1" value="1">
+                                    <label for="1">1</label>
+                                    <input type="radio" id="2" name="2" value="2">
+                                    <label for="2">2</label>
+                                    <input type="radio" id="3" name="3" value="3">
+                                    <label for="3">3</label>
+                                    <input type="radio" id="4" name="4" value="4">
+                                    <label for="4">4</label>
+                                    <input type="radio" id="5" name="5" value="5">
+                                    <label for="5">5</label>
+                                    <input type="radio" id="6" name="6" value="6">
+                                    <label for="6">6</label>
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                                <label for="telnum" class="col-12 col-md-2 col-form-label">Date And Time: </label>
+                                <div class="col-6 col-md-5">
+                                    <input type="Date" class="form-control" id="date" name="date" 
+                                    placeholder="Date">
+                                </div>
+                                <div class="col-6 col-md-5">
+                                    <input type="Time" class="form-control" id="time" name="time" 
+                                    placeholder="Time"> 
+                                </div>
+                            </div>
+                            <div class="form-group row">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">
+                                Reserve
+                            </button>
+                        </div>
+                    </div>
+                </form>
                     </div>
                 </div>
             </div>
