--- a/Bootstrap4/conFusion/index.html
+++ b/Bootstrap4/conFusion/index.html
@@ -75,6 +75,69 @@
             </div>
         </div>
     </div>
+    <div id="reserveModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve a Table</h4>
+                    <button type="button" class="close" data-dismiss="modal">
+                        &times;
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form action="">
+                        <div class="form-group row">
+                            <label for="people" class="col-md-2 col-form-label">Number Of Guests: </label>
+                            <div class="col-md-10">
+                                <input type="radio" id="1" name="reserve" value="1">
+                                <label for="1">1</label>
+                                <input type="radio" id="2" name="reserve" value="2">
+                                <label for="2">2</label>
+                                <input type="radio" id="3" name="reserve" value="3">
+                                <label for="3">3</label>
+                                <input type="radio" id="4" name="reserve" value="4">
+                                <label for="4">4</label>
+                                <input type="radio" id="5" name="reserve" value="5">
+                                <label for="5">5</label>
+                                <input type="radio" id="6" name="reserve" value="6">
+                                <label for="6">6</label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="section" class="col-md-2 col-form-label">Section: </label>
+                            <div class="btn-group btn-group-toggle" data-toggle="buttons">
+                                <label class="btn btn-success active">
+                                  <input type="radio" name="section" id="non-smoking" autocomplete="off" checked> Non-Smoking
+                                </label>
+                                <label class="btn btn-danger">
+                                  <input type="radio" name="section" id="smoking" autocomplete="off"> Smoking
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label for="datetime" class="col-12 col-md-2 col-form-label">Date And Time: </label>
+                            <div class="col-6 col-md-5">
+                                <input type="Date" class="form-control" id="date" name="date" 
+                                placeholder="Date">
+                            </div>
+                            <div class="col-6 col-md-5">
+                                <input type="Time" class="form-control" id="time" name="time" 
+                                placeholder="Time"> 
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                    <div class="offset-md-2 col-md-10">
+                        <button type="cancel" class="btn btn-secondary">Cancel</button>
+                        <button type="submit" class="btn btn-primary">
+                            Reserve
+                        </button>
+                    </div>
+                </div>
+            </form>       
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row row-header">
@@ -87,10 +150,8 @@
                 </div>
                 <div class="col-12 col-sm-3 align-self-center">
                     <span>
-                        <a href="#reserve" class="btn btn-solid btn-block bg-warning"
-                        data-toggle="tooltip" data-html="true" 
-                        title="Or Call us at +852 12345678"
-                        data-placement="bottom">
+                        <a href="" class="btn btn-solid btn-block bg-warning"
+                        data-toggle="modal" data-target="#reserveModal">
                             Reserve Table
                         </a>
                     </span>
@@ -142,53 +203,7 @@
             </div>
         </div>
     
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-8 offset-sm-2">
-                <div class="card" id="reserve">
-                    <h3 class="card-header bg-warning text-white">Reserve A Table</h3>
-                    <div class="card-body">
-                        <form action="">
-                            <div class="form-group row">
-                                <label for="people" class="col-md-2 col-form-label">Number Of Guests: </label>
-                                <div class="col-md-10">
-                                    <input type="radio" id="1" name="1" value="1">
-                                    <label for="1">1</label>
-                                    <input type="radio" id="2" name="2" value="2">
-                                    <label for="2">2</label>
-                                    <input type="radio" id="3" name="3" value="3">
-                                    <label for="3">3</label>
-                                    <input type="radio" id="4" name="4" value="4">
-                                    <label for="4">4</label>
-                                    <input type="radio" id="5" name="5" value="5">
-                                    <label for="5">5</label>
-                                    <input type="radio" id="6" name="6" value="6">
-                                    <label for="6">6</label>
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                                <label for="telnum" class="col-12 col-md-2 col-form-label">Date And Time: </label>
-                                <div class="col-6 col-md-5">
-                                    <input type="Date" class="form-control" id="date" name="date" 
-                                    placeholder="Date">
-                                </div>
-                                <div class="col-6 col-md-5">
-                                    <input type="Time" class="form-control" id="time" name="time" 
-                                    placeholder="Time"> 
-                                </div>
-                            </div>
-                            <div class="form-group row">
-                        <div class="offset-md-2 col-md-10">
-                            <button type="submit" class="btn btn-primary">
-                                Reserve
-                            </button>
-                        </div>
-                    </div>
-                </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+        
 
     <footer class="footer"> 
         <div class="container">
@@ -237,11 +252,6 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script>
-        $(document).ready(function(){
-            $('[data-toggle="tootltip"]').tooltip();
-        });
-    </script>
 </body>
 
 </html>
